@@ -1,3 +1,7 @@
+* Fri Jun 14 2019 Michael Morrone <michael.morrone@onyxpoint.com> - 0.1.2
+- Configured acceptance tests to use simp repositories 
+- Update the upper bound of puppet and stdlib to < 7.0.0
+
 * Wed May 29 2019 Michael Morrone <michael.morrone@onyxpoint.com> - 0.1.1
 - Update RPMs for installation and testing
 
